// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/ScrollToTopButton Defaults play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithChildren play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          dummy string
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithCustomClassNames play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  dummyClassname">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ dummyClassname"
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL dummyClassname">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa dummyClassname"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW dummyClassname">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithCustomCss play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ dummyClassname ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithDataTestid play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
              data-testid="123"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithId play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button id="htmlid"
              class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithLang play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              lang="nb"
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithMobileScreen smoke-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithRef play-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
              id="dummyIdForwardedFromRef"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithShadowDom play-test 1`] = `
<scrolltotop-customelement>
</scrolltotop-customelement>
`;

exports[`Tester/ScrollToTopButton WithVisibilityThreshold smoke-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v  "
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;

exports[`Tester/ScrollToTopButton WithWideScreen smoke-test 1`] = `
<div class="noTransition height100vh"
     data-test-block="true"
>
  <main class="scrollToTopContainer"
        tabindex="-1"
  >
    <div class="ExternalLayout_layout__1g3xM ">
      <style>
        div.css-1gh4yjl { max-width: none}
      </style>
      <p>
        <strong>
          Responsive container
        </strong>
      </p>
      <article class="ExternalLayout_article__2YMVJ">
        <p>
          <strong>
            Responsive article
          </strong>
        </p>
        <p>
          (uses --semantic-responsive-article)
        </p>
      </article>
      <p>
        (uses --semantic-responsive-container)
      </p>
    </div>
    <div class="ScrollToTopButton_container__34jyQ  ">
      <button class="ScrollToTopButton_scrollToTopButton__29l3v ScrollToTopButton_scrollToTopButton_visible__36YnQ "
              type="button"
      >
        <div class="ScrollToTopButton_scrollToTopButtonIconContainer__2WIKL ">
          <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_large__ed4qv ScrollToTopButton_scrollToTopButtonIconContainerIcon__tceHa "
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11.1 17.6h1.8v1.1h-1.8v-1.1zm0-3.3h1.8v2.2h-1.8v-2.2zm0 6.2h1.8v.5h-1.8v-.5zm-4.9-7.3 5-5v5.1H13V8.2l5 4.9 1.3-1.3-7.3-7-7.1 7.1 1.3 1.3zM21 3H3v1.8h18V3z">
            </path>
          </svg>
        </div>
        <div class="ScrollToTopButton_scrollToTopButtonLabel__3b-FW ">
          Til toppen
        </div>
      </button>
    </div>
  </main>
</div>
`;
